--- a/index.html
+++ b/index.html
@@ -47,12 +47,25 @@
                   <ul class="bg-dark">
                     <li class="bg-dark">
                         <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
+                        <input type="text" placeholder="1/10/2010" id="datetime">
                     </li>
                     <li class="bg-dark">
-                      <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                      <label for="city">Enter City</label>
+                      <input type="text" placeholder="Roswell" id="city">
                     </li>
-                </ul>
+                    <li class="bg-dark">
+                      <label for="state">Enter State</label>
+                      <input type="text" placeholder="New Mexico" id="state">
+                    </li>
+                    <li class="bg-dark">
+                      <label for="country">Enter Country</label>
+                      <input type="text" placeholder="US" id="country">
+                    </li>
+                    <li class="bg-dark">
+                      <label for="shape">Enter Shape</label>
+                      <input type="text" placeholder="Triangle" id="shape">
+                    </li>
+                  </ul>
               </div>
               <div class="col-md-9">
                 <table class="table table-striped">
