Upload updated file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UFO Sightings!!</title>
+    <title>UFO Sightings!</title>
 </head>
 <link
       rel="stylesheet"
@@ -47,23 +47,23 @@
                   <ul class="bg-dark">
                     <li class="bg-dark">
                         <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime">
+                        <input type="text" placeholder="1/1/2010" id="datetime">
                     </li>
                     <li class="bg-dark">
                       <label for="city">Enter City</label>
-                      <input type="text" placeholder="Roswell" id="city">
+                      <input type="text" placeholder="grants pass" id="city">
                     </li>
                     <li class="bg-dark">
-                      <label for="state">Enter State</label>
-                      <input type="text" placeholder="New Mexico" id="state">
+                      <label for="state">Enter State (abbrv.)</label>
+                      <input type="text" placeholder="or" id="state">
                     </li>
                     <li class="bg-dark">
-                      <label for="country">Enter Country</label>
-                      <input type="text" placeholder="US" id="country">
+                      <label for="country">Enter Country (abbrv.)</label>
+                      <input type="text" placeholder="us" id="country">
                     </li>
                     <li class="bg-dark">
-                      <label for="shape">Enter Shape</label>
-                      <input type="text" placeholder="Triangle" id="shape">
+                      <label for="shape">Enter Shape of UFO</label>
+                      <input type="text" placeholder="triangle" id="shape">
                     </li>
                   </ul>
               </div>
